--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,10 @@ certifi==2026.1.4
 cffi==2.0.0
 click==8.3.1
 colorama==0.4.6
+cryptography==46.0.4
 dnspython==2.8.0
 dotenv==0.9.9
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.128.0
 fastapi-cli==0.0.20
@@ -25,7 +27,9 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 minio==7.2.20
+passlib==1.7.4
 psycopg2==2.9.11
+pyasn1==0.6.2
 pycparser==3.0
 pycryptodome==3.23.0
 pydantic==2.12.5
@@ -33,14 +37,18 @@ pydantic-extra-types==2.11.0
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.11.0
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.22
 PyYAML==6.0.3
 rich==14.3.2
 rich-toolkit==0.18.1
 rignore==0.7.6
+rsa==4.9.1
 sentry-sdk==2.51.0
 shellingham==1.5.4
+six==1.17.0
 SQLAlchemy==2.0.46
 sqlmodel==0.0.32
 starlette==0.50.0
