--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,12 +22,17 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 minio==7.2.20
+mock==5.2.0
+ollama==0.6.1
+packaging==26.0
 passlib==1.7.4
+pluggy==1.6.0
 psycopg2==2.9.11
 pyasn1==0.6.2
 pycparser==3.0
@@ -38,6 +43,8 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 PyJWT==2.11.0
+pytest==9.0.2
+pytest-mock==3.15.1
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.22
