updated environment variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ frontend:
       dockerfile: Dockerfile
     container_name: bookdb_frontend
     environment:
-      REACT_APP_API_URL: http://localhost:8000
+      NEXT_PUBLIC_API_URL: http://localhost:8000
     ports:
       - "3000:3000"
     depends_on:
