--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,7 +33,7 @@ ollama==0.6.1
 packaging==26.0
 passlib==1.7.4
 pluggy==1.6.0
-psycopg2==2.9.11
+psycopg2-binary==2.9.11
 pyasn1==0.6.2
 pycparser==3.0
 pycryptodome==3.23.0
