--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      minio:
+        condition: service_healthy
     volumes:
       - ./backend:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
@@ -67,7 +69,6 @@ services:
       - backend
     volumes:
       - ./frontend:/app
-      - /app/node_modules
     command: npm start
 
 volumes:
